--- a/package.json
+++ b/package.json
@@ -3,16 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.9",
+    "@mui/material": "^6.1.9",
+    "@mui/styled-engine-sc": "^6.1.9",
+    "@reduxjs/toolkit": "^2.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/date-fns": "^2.6.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.121",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.16.3",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-redux-toolkit": "^0.0.1-alpha.2",
+    "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +51,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/moment-timezone": "^0.5.30",
+    "@types/react": "^18.3.12",
+    "@types/react-big-calendar": "^1.16.0",
+    "@types/react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.15"
   }
 }
